[package]
name = "rc-usb-interface"
version = "0.1.0"
authors = ["Autumnal <friedrich122112@googlemail.com>", "wucke13 <wucke13@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# optimize for size ('z' would optimize even more)
#opt-level = 's'
# link with link time optimization (lto).
#lto = true
# debug symbols are nice, and don't cost anything in binary size
debug = true

[dependencies]
stm32f4xx-hal = { version = "0.8.3", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m = "0.6.3"
cortex-m-rt = { version = "0.6.12", features = ["device"] }
cortex-m-rtic = "0.5.5"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
usb-device = "0.2.5"
nb = "1.0.0"
ppm_decode = "0.1.3"

rtt-target = { version = "*", features = ["cortex-m"], optional = true}


[features]
default = [ "rtt" ]
rtt = [ "rtt-target" ]
